assets/css/main.css
  body {
    height: 100%;
  }

  .diagram,
  .display-6,
  .var,
  .content {
    text-align: center;
  }

  .content {
    padding-top: 10px;
  }

  .chord {
    line-height: 50px;
  }

  #diagram {
    height: 100%;
    margin-top: 5%;
  }

  input {
    visibility: hidden;
  }

  label {
    cursor: pointer;
    font-size: 2em;
    margin-right: 1%;
    margin-left: 2%;
  }

  input:checked+label {
    background-color: rgb(83, 236, 227);
  }


  .chords {
    display: inline-block;
    position: relative;
    width: 0;
    top: -1.3em;
    left: 0;
    font-weight: bold;
  }

  #first {
    background-image: url(../img/guitarist.jpeg);
    height: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    text-align: center;
    position: relative;
  }

  /*
  #second {
    background-image: url(../img/wallpaper.jpg);
    height: 700px;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
  }

  #third {
    background-image: url(../img/guitarist2.jpeg);
    height: 700px;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
  }
  */

  .mid-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 39px;
  }


  header {
    background-image: linear-gradient(grey, white);
  }

  #top-content>h1 {
    margin-top: 20px;
    text-align: center;
  }

  .col-md-9 {
    font-size: 20px;
  }

  .col-md-6>p {
    font-size: 19px;
  }

  .col-md-12>p {
    font-size: 19px;
  }

  img {
    background-position: -10px
  }

  p {
    text-align: justify;
  }

  #accordion {
    margin: 2%;
  }

  .container>p {
    text-align: center;
  }

  .container>h3,
  #about {
    text-align: center;
  }

  #top-content {
    background-size: cover;
    height: 100px;
    background-position: top;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
  }

  #about-content {
    padding: 10px;
  }

  footer {
    position: absolute;
    position: bottom;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #2a2a2a;
    color: white;
    text-align: center;
    padding: 20px;
  }
  tr:nth-child(even){
    background-color: #dddddd;
  }
  td, th {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 8px;
  }
  table {
    width: 80%;
    border: 1px solid;
  }
  .modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
  }
  .content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
  }

